[project]
name = "updes"
description = "Universal Partial Differential Equations Simulator"
version = "0.1.5"
authors = [
    { name = "Roussel Desmond Nzoyem", email = "desmond.ngueguin@gmail.com" }
]
dependencies = [
    "jax >= 0.3.4",
    "gmsh",
    "pytest",
    "matplotlib>=3.4.0",
    "scikit-learn",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pyvista[trame]",
    "quartodoc",
]

[tool.setuptools]
py-modules = ["updes"]